--- a/SpringBoot_CountriesFromJSON/pom.xml
+++ b/SpringBoot_CountriesFromJSON/pom.xml
@@ -26,6 +26,11 @@
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>3.0.6</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
